Задание 6. Добавлена команда регистрации пользователя

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,9 @@ spring:
 telegrambot:
   name: ${TG_NAME_GPB}
   token: ${TG_TOKEN_GPB}
+  client:
+    urls:
+      host: http://localhost:8084/api/v1
+      endpoints:
+        users:
+          register: /users
