Задание 7. Добавлена команда создания счета

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,5 @@ telegrambot:
       endpoints:
         users:
           register: /users
+        accounts:
+          create: /users/{id}/accounts
