Задание 8. Добавлена функциональность запроса баланса

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,6 @@ telegrambot:
           register: /users
         accounts:
           create: /users/{id}/accounts
+          get: /users/{id}/accounts
+        transfers:
+          create: /transfers
